# dev-tools

./: .gitignore  CLAUDE.md  README.md  install.ps1  install.sh  plan.md  pyproject.toml  sync.ps1
.github/workflows/: test.yml
src/codesync/: __init__.py  __main__.py  auth.py  cli.py  config.py  db_sync.py  delete.py  fork_setup.py  git_ops.py  github_auto.py  output.py  paths.py  publish.py  rename.py  shell.py  status.py  sync.py  updater.py  wizard.py
tests/: test_cli.py  test_config_migration.py  test_delete.py  test_fork_setup.py  test_git_ops.py  test_github_auto.py  test_publish.py  test_rename.py  test_status.py  test_sync.py  test_sync_helpers.py  test_toml_quoting.py  test_updater.py  test_version.py  test_wizard.py
