[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codesync"
version = "2.2.4"
description = "Personal multi-machine git/db sync tool. Cross-platform successor to dev-tools v1 (PowerShell)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "tinyvane" }]
keywords = ["git", "sync", "gita", "multi-repo", "devtools"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Version Control :: Git",
]
dependencies = []  # stdlib only — gita was dropped in v2.2.0

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
codesync = "codesync.cli:main"

[project.urls]
Homepage = "https://github.com/tinyvane/dev-tools"
Issues = "https://github.com/tinyvane/dev-tools/issues"
"V1 Release" = "https://github.com/tinyvane/dev-tools/releases/tag/v1.0.0"

[tool.setuptools.packages.find]
where = ["src"]
